<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage.MainActivity">

    <ImageView
        android:id="@+id/loginImageViewID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_day_ny" />

    <Button
        android:id="@+id/loginButtonID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayoutID"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayoutID" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UsernameTextInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameEditTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayoutID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/UsernameTextInputID"
        app:layout_constraintStart_toStartOf="@+id/UsernameTextInputID"
        app:layout_constraintTop_toBottomOf="@+id/UsernameTextInputID">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEditTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"

            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>